<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#00A89C"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="40dp"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/icon_header"
                android:layout_marginTop="15dp"
                android:gravity="center_horizontal"
                android:text="Get Started"
                android:textColor="#ffffff"
                android:textSize="35dp" />

            <TextView
                android:id="@+id/caption"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/title"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="16dp"
                android:layout_marginRight="20dp"
                android:gravity="center_horizontal"
                android:text="Create an account for your Catch Log and submit photos."
                android:textColor="#ffffff"
                android:textSize="16sp" />

            <LinearLayout
                android:id="@+id/firstLastLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/profile_image"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="16dp"
                android:layout_marginRight="10dp"
                android:orientation="horizontal">

                <studio.carbonylgroup.textfieldboxes.TextFieldBoxes
                    android:id="@+id/firstNameFloat"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/rounded_white_corner_fill"
                    android:imeOptions="actionNext"
                    android:textColorHint="@color/edittext_hint"
                    app:labelText="First name"
                    app:secondaryColor="#9B9B9B">

                    <studio.carbonylgroup.textfieldboxes.ExtendedEditText
                        android:id="@+id/firstNameEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:elegantTextHeight="true"
                        android:imeOptions="actionNext"
                        android:inputType="text"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:textColor="#000000"
                        android:textColorHint="@color/edittext_hint"
                        android:textSize="16sp" />
                </studio.carbonylgroup.textfieldboxes.TextFieldBoxes>

                <studio.carbonylgroup.textfieldboxes.TextFieldBoxes
                    android:id="@+id/lastNameFloat"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/rounded_white_corner_fill"
                    android:imeOptions="actionNext"
                    app:labelText="Last name"
                    app:primaryColor="#9B9B9B"
                    app:secondaryColor="#9B9B9B">

                    <studio.carbonylgroup.textfieldboxes.ExtendedEditText
                        android:id="@+id/lastNameEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:elegantTextHeight="true"
                        android:imeOptions="actionNext"
                        android:inputType="text"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:textColor="#000000"
                        android:textColorHint="#9B9B9B"
                        android:textSize="16sp"
                        app:backgroundTint="#9B9B9B" />
                </studio.carbonylgroup.textfieldboxes.TextFieldBoxes>


            </LinearLayout>

            <studio.carbonylgroup.textfieldboxes.TextFieldBoxes
                android:id="@+id/emailFloat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/firstLastLayout"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/rounded_white_corner_fill"
                android:imeOptions="actionNext"
                app:labelText="Email Address"
                app:primaryColor="#9B9B9B"
                app:secondaryColor="#9B9B9B">

                <studio.carbonylgroup.textfieldboxes.ExtendedEditText
                    android:id="@+id/emailEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:elegantTextHeight="true"
                    android:imeOptions="actionNext"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColor="#000000"
                    android:textColorHint="#9B9B9B"
                    android:textSize="16sp"
                    app:backgroundTint="#9B9B9B" />
            </studio.carbonylgroup.textfieldboxes.TextFieldBoxes>

            <studio.carbonylgroup.textfieldboxes.TextFieldBoxes
                android:id="@+id/passwordFloat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/emailFloat"
                android:layout_centerVertical="true"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="20dp"
                android:layout_weight="1"
                android:background="@drawable/rounded_white_corner_fill"
                android:imeOptions="actionNext"
                app:labelText="Password"
                app:primaryColor="#9B9B9B"
                app:secondaryColor="#9B9B9B">

                <studio.carbonylgroup.textfieldboxes.ExtendedEditText
                    android:id="@+id/passwordEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@null"
                    android:elegantTextHeight="true"
                    android:imeOptions="actionNext"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:textColor="#000000"
                    android:textColorHint="#9B9B9B"
                    android:textSize="16sp"
                    app:backgroundTint="#9B9B9B" />
            </studio.carbonylgroup.textfieldboxes.TextFieldBoxes>


            <studio.carbonylgroup.textfieldboxes.TextFieldBoxes
                android:id="@+id/confirmPasswordFloat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/passwordFloat"
                android:layout_centerVertical="true"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="20dp"
                android:layout_weight="1"
                android:background="@drawable/rounded_white_corner_fill"
                android:imeOptions="actionNext"
                app:labelText="Confirm password"
                app:primaryColor="#9B9B9B"
                app:secondaryColor="#9B9B9B">

                <studio.carbonylgroup.textfieldboxes.ExtendedEditText
                    android:id="@+id/confirmPasswordEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:elegantTextHeight="true"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColor="#000000"
                    android:textColorHint="#9B9B9B"
                    android:textSize="16sp"
                    app:backgroundTint="#9B9B9B" />
            </studio.carbonylgroup.textfieldboxes.TextFieldBoxes>

            <TextView
                android:id="@+id/signIn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="16dp"
                android:layout_marginRight="20dp"
                android:gravity="center_horizontal"
                android:text="Already have an account? SIGN IN" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="16dp"
                android:layout_marginRight="20dp"
                android:gravity="center_horizontal"
                android:text="By registering an account, I agree to the" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/t_and_c"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/t_and_c" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="3dp"
                android:layout_marginEnd="3dp"
                android:gravity="center_horizontal"
                android:text="and" />

            <TextView
                android:id="@+id/privacy_policy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/privacy_policy" />

        </LinearLayout>

            <Button
                android:id="@+id/letsGoButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@+id/next1"
                android:layout_below="@+id/confirmPasswordFloat"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/gray_button"
                android:text="Let's Go"
                android:textColor="#ffffff" />

            <TextView
                android:id="@+id/next1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="20dp"
                android:text="@string/skip"
                android:textColor="#ffffff" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>